2009-02-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* eu/eu.po: Added Basque translation.
	* Makefile.am: Added 'eu' to DOC_LINGUAS.

2009-02-15  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2009-01-31  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.

2009-01-16  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.

2009-01-06  Philip Withnall  <philip@tecnocode.co.uk>

	Deleted remaining non-localised figures.

2009-01-06  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/figures/*.png: deleted non localizable screenshots

2008-12-28  Philip Withnall  <philip@tecnocode.co.uk>

	Update svn:ignore properties.

2008-12-06  Takeshi AIHANA <takeshi.aihana@gmail.com>

	* ja/figures/totem_start_window.png:
	  Updated to the localized screenshot.

2008-12-05  Takeshi AIHANA <takeshi.aihana@gmail.com>

	* Makefile.am:
	* ja/ja.po:
	* ja/figures/*.png:
	  Added Japanese translation which is contributed by
	  Mitsuya Shibata.

2008-11-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation.

2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Mention about loading a custom subtitles file if one
	isn't found automatically. (Closes: #554929)

2008-08-09  Luca Ferretti  <elle.uca@libero.it>

	* it/*:
	* Makefile.am: Added Italian translation from gnome-2-22 branch

2008-08-03  Andre Klapper  <a9016009@gmx.de>

	* de/de.po: Updated German translation by Mario Blättermann.

2008-07-26  Tomasz Dominikowski <tdominikowski@aviary.pl>

	* pl/pl.po: Added Polish translation by Aviary.pl
	* Makefile.am: Added pl to DOC_LINGUAS.

2008-07-22  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2008-04-11  Claude Paroz  <claude@2xlibre.net>

	* es/es.po: 
	* fr/fr.po: "ulink linkend" replaced by "ulink url" so as make check
	passes. Fixes #527424.
