@@ -1,3 +1,9 @@
+2009-02-16  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* C/totem.xml: Updated the documentation to match changes in Totem
+	since the stone age. Added a bit of documentation for new features.
+	(Helps: #496647)
+
 2009-02-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
 	* eu/eu.po: Added Basque translation.
